@@ -1,7 +1,9 @@
-2020-08-20
+2020-09-03
 
         * Version 1.8.0 released
         ========================
+
+        Add GFunctions abstract base class (#3328)
 
 
 2020-08-21
